Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25633

Building is completely broken after upgrading to Windows 20H2

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 5.0.0-rc1
    • Qt Creator 4.14.2
    • None
    • Edition Windows 10 Home
      Version 20H2
      Installed on ‎23.‎04.‎2021
      OS build 19042.928
      Experience Windows Feature Experience Pack 120.2212.551.0
    • Windows
    • b6dd53d4ed754171050bfce94325c55e033df5a7 (qt-creator/qt-creator/5.0)

    Description

      When I open existing qbs project or create a new one (Qt Console App), qbs.exe hogs all memory and terminates after a couple of minutes. Build commands are not available. See screenshots qbs1,2,3.

      I've also tried to create a new project of the same kind with qmake build system. Qt Creator hangs in "Reloading Project" forever.

      I've seen this issue with QBS for the first time about a month ago, right after the first upgrade to Windows 20H2. I was short in time and simply downgraded windows to previous version. The problem was gone. Now 20H2 is back again, thanks to auto-updates. I'm ready to help in diagnostics until I haven't downgraded it one more time...

      Attachments

        1. build.bat
          0.6 kB
        2. image-2021-04-27-09-22-23-573.png
          image-2021-04-27-09-22-23-573.png
          49 kB
        3. image-2021-04-27-09-23-43-231.png
          image-2021-04-27-09-23-43-231.png
          21 kB
        4. qbs.txt
          15 kB
        5. qbs1.png
          qbs1.png
          26 kB
        6. qbs2.png
          qbs2.png
          26 kB
        7. qbs3.png
          qbs3.png
          61 kB
        8. qbs-profile.png
          qbs-profile.png
          38 kB
        9. qmake.png
          qmake.png
          73 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            aleksandr-123 Alex Z
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes