src/plugins/projectexplorer/buildaspects.h
@@ -47,6 +47,8 @@ public:
 
     void addToLayout(Utils::LayoutBuilder &builder) override;
 
+    static Utils::FilePath fixupDir(const Utils::FilePath &dir);
+
 private:
     void toMap(QVariantMap &map) const override;
     void fromMap(const QVariantMap &map) override;
